--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -28,6 +28,6 @@
 </ion-content>
 <ion-footer>
   <ion-toolbar>
-    <ion-title>&copy;jitusurve@gmail.com</ion-title>
+    <ion-title>Developer: jitusurve@gmail.com</ion-title>
   </ion-toolbar>
 </ion-footer>
